extends Node2D



func _on_return_button_pressed() -> void:
	queue_free()


func _on_button_one_pressed() -> void:
	print("one pressed")


func _on_button_two_pressed() -> void:
	print("two pressed")


func _on_button_three_pressed() -> void:
	print("three pressed")


func _on_button_four_pressed() -> void:
	print("four pressed")


func _on_button_five_pressed() -> void:
	print("five pressed")


func _on_button_six_pressed() -> void:
	print("six pressed")


func _on_button_seven_pressed() -> void:
	print("seven pressed")


func _on_button_eight_pressed() -> void:
	print("eight pressed")


func _on_button_nine_pressed() -> void:
	print("nine pressed")


func _on_enter_pressed() -> void:
	print("enter pressed")
